chore: add data source

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgres://localhost:54321/shoppingList
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=8081
 
