--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -12,5 +12,19 @@ services:
     volumes:
       - shopping-list-postgres-data:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: wubin28@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: wubin28@gmail.com
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    volumes:
+      - shopping-list-pgadmin-data:/var/lib/pgadmin
+
+
 volumes:
   shopping-list-postgres-data:
+  shopping-list-pgadmin-data:
