--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,8 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
