--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "element-plus": "^2.3.14",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
