chore: install iproute2 in the image in order to make containers having tc for injecting network delay

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,4 +1,6 @@
-FROM bellsoft/liberica-runtime-container:jre-17-slim-glibc
+FROM openjdk:17-jdk-slim-buster
+
+RUN apt-get update && apt-get install -y iproute2
 
 VOLUME /tmp
 
