feat: display user-friendly messages on web page when the back-end app delays responses for over 3 seconds

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - postgres
 
   shopping-list-front-end:
-    image: wubin28/shopping-list-front-end:v1.0
+    image: wubin28/shopping-list-front-end:v1.0.delay
     ports:
       - "8080:8080"
     depends_on:
