--- a/infrastructure/deployment-shopping-list-api.yml
+++ b/infrastructure/deployment-shopping-list-api.yml
@@ -24,4 +24,4 @@ spec:
         - name: DB_HOST
           value: postgres-service
         - name: FRONT_END_URL
-          value: http://20.232.53.195:8080
+          value: http://localhost:8080
