--- a/infrastructure/ingress.yml
+++ b/infrastructure/ingress.yml
@@ -1,18 +1,25 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: shopping-list-api-ingress
+  name: shopping-list-app-ingress
   annotations:
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "*"
 spec:
+  ingressClassName: nginx
   rules:
-  - host: localhost
-    http:
+  - http:
       paths:
-      - path: /
+      - path: /(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: shopping-list-front-end-service
+            port:
+              number: 8080
+      - path: /api(/|$)(.*)
         pathType: Prefix
         backend:
           service:
