--- a/infrastructure/ingress.yml
+++ b/infrastructure/ingress.yml
@@ -1,30 +1,31 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: shopping-list-app-ingress
-  namespace: shopping-list-app
+  name: shopping-list-ingress
   annotations:
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "*"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
         - path: /api/v1/shopping-items(/|$)(.*)
-          pathType: Prefix
+          pathType: ImplementationSpecific
           backend:
             service:
-              name: shopping-list-api-service
+              name: shopping-list-api
               port:
                 number: 8081
         - path: /(.*)
-          pathType: Prefix
+          pathType: ImplementationSpecific
           backend:
             service:
-              name: shopping-list-front-end-service
+              name: shopping-list-front-end
               port:
                 number: 8080
