--- a/infrastructure/service-shopping-list-api.yml
+++ b/infrastructure/service-shopping-list-api.yml
@@ -1,13 +1,12 @@
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: shopping-list-api-service
+  name: shopping-list-api
 spec:
   selector:
-    app: shopping-list
+    app: shopping-list-api
   ports:
     - protocol: TCP
       port: 8081
       targetPort: 8081
-  type: LoadBalancer
+  type: ClusterIP
