--- a/infrastructure/service-shopping-list-front-end.yml
+++ b/infrastructure/service-shopping-list-front-end.yml
@@ -1,13 +1,12 @@
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: shopping-list-front-end-service
+  name: shopping-list-front-end
 spec:
   selector:
-    app: shopping-list
+    app: shopping-list-front-end
   ports:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: ClusterIP
