fix: Remove 8081 from API_URL of the front-end code. Change API_URL in the deployment file of front end to the external ip of ingress nginx controller. Change the path of shopping-list-api in ingress.yml. Finally it works.

--- a/infrastructure/deployment-shopping-list-front-end.yml
+++ b/infrastructure/deployment-shopping-list-front-end.yml
@@ -19,7 +19,7 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
-        image: wubin28/shopping-list-front-end:v1.1
+        image: wubin28/shopping-list-front-end:v1.1.no8081
         env:
         - name: API_URL
-          value: shopping-list-api
+          value: 20.88.168.246
