--- a/infrastructure/ingress.yml
+++ b/infrastructure/ingress.yml
@@ -13,7 +13,7 @@ spec:
   rules:
   - http:
       paths:
-        - path: /api
+        - path: /api/v1/shopping-items
           pathType: Prefix
           backend:
             service:
